Display camera raise timeout and flick evaluation